# oracles

./: Cargo.toml  README.md  install.sh
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
.grok-plugin/: marketplace.json
crates/astrid-mcp/: Capsule.toml  Cargo.toml
crates/astrid-mcp/src/: lib.rs
crates/claude-completion/: Capsule.toml
crates/claude-completion/src/: anthropic.rs  lib.rs
crates/claude-install/: Capsule.toml
crates/claude-install/src/: claude_md.rs  config.rs  layout.rs  settings.rs
crates/claude-runner/: Capsule.toml
crates/claude-runner/src/: config.rs  hooks.rs  hooks_tests.rs  identity.rs  install.rs  lib.rs  settings.rs  shutdown.rs  spawn.rs  (+1 more)
crates/codex-install/: Capsule.toml  Cargo.toml
crates/codex-runner/: Capsule.toml  Cargo.toml  README.md
crates/mimir-mcp/: Cargo.toml
crates/oracle-broker/: Cargo.toml
crates/oracle-core/: Cargo.toml
crates/oracle-host/: Cargo.toml
crates/sage-install/: Cargo.toml
crates/sage-mcp/: Cargo.toml
crates/sibyl-mcp/: Cargo.toml
distros/: claude.toml  codex.toml  grok.toml  mimir.toml  sage.toml  sibyl.toml
packs/: claude.toml  codex.toml  grok.toml
plugins/claude/: .aos-runtime-generation  README.md
plugins/grok/: README.md  install.sh
plugins/unicity-aos/: .mcp.json  install.sh
release/: runtime-compatibility.toml
scripts/: sync-plugins.sh  test-install.sh  test-plugin-bootstrap.sh  test_brand_boundary.py  test_codex_mcp_startup.py  test_host_mcp_startup.py  test_pack_contract.py  test_release_contract.py
(+52 files in other folders)
