[package]
name = "astrid-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Neutral Astrid broker capsule behind the Unicity AOS MCP surface"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
oracle-broker.workspace = true
oracle-core.workspace = true
astrid-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
